<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sora.mcalculator.MainActivity"
    tools:showIn="@layout/activity_main">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/et_view"
        android:editable="false"
        android:textColor="#FFFFFF"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:background="#333131"/>

    <TableRow
        android:id="@+id/tb_1"
        android:layout_weight="1">
        <Button
            android:layout_weight="2"
            android:text="@string/bt_01"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_void"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_02"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_delete"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_03"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_clear"/>
    </TableRow>

    <TableRow
        android:id="@+id/tb_2"
        android:layout_weight="1">
        <Button
            android:layout_weight="1"
            android:text="@string/bt_11"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_7"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_12"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_8"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_13"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_9"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_14"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_divide"/>
    </TableRow>

    <TableRow
        android:id="@+id/tb_3"
        android:layout_weight="1">
        <Button
            android:layout_weight="1"
            android:text="@string/bt_21"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_4"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_22"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_5"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_23"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_6"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_24"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_multiply"/>
    </TableRow>

    <TableRow
        android:id="@+id/tb_4"
        android:layout_weight="1">
        <Button
            android:layout_weight="1"
            android:text="@string/bt_31"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_1"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_32"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_2"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_33"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_3"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_34"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_minus"/>
    </TableRow>

    <TableRow
        android:id="@+id/tb_5"
        android:layout_weight="1">
        <Button
            android:layout_weight="1"
            android:text="@string/bt_41"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_dot"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_42"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_0"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_43"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_equal"/>
        <Button
            android:layout_weight="1"
            android:text="@string/bt_44"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:id="@+id/bt_add"/>
    </TableRow>
</TableLayout>
